Commented browsing https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/2fr-52sIkUWKItLjj18qJGQALMvk?Type=TaskLink&Channel=Link&CreatedTime=637266758218790000

--- a/LoydCrafts.WebSite/Pages/browsing.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsing.cshtml
@@ -27,16 +27,43 @@
         <!-- Lower box of the left sidebar - item filters for browsing -->
         <div class="sidebar-lower">
 
-            <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp; Select All</div>
-            <div class="checkbox"><input type="checkbox" checked/>&nbsp;Include My Items</div>
+            <!-- Set defaults -->
+            <div class="lower-sidebar-text">
+                Set defaults
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;
+                Select All
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked/>&nbsp;
+                Include My Items
+            </div>
+            
+            <!-- Filter by category -->
+            <div class="lower-sidebar-text">
+                Filter by Category
+            </div>
 
-            <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-            <div class="checkbox"><input type="checkbox" checked/>&nbsp;Decor</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
-            <div class="checkbox"><input type="checkbox" checked/>&nbsp;Electronics</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;
+                Furniture
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked/>&nbsp;
+                Decor
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;
+                Books
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked/>&nbsp;
+                Electronics
+            </div>
+            
+            <div class="checkbox"><input type="checkbox" checked />&nbsp;
+                Misc
+            </div>
             
         </div>
 
@@ -47,38 +74,98 @@
 
         <!-- Newly created listing for Elena's Chair scenario item -->
         <div class="listing">
-            <div class="listing-img"><img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg"></div>
-            <div class="listing-item-title" style="float:left">Herman Miller Aeron Desk Chair</div>
-            <div class="listing-item-date-person" style="float:right">May 2nd, 2020 by emapelli</div>
+            
+            <div class="listing-img">
+                <img style="margin-top: 13px;" src="~/img/herman-miller-100px.jpg">
+            </div>
+            
+            <div class="listing-item-title" style="float:left">
+                Herman Miller Aeron Desk Chair
+            </div>
+            
+            <div class="listing-item-date-person" style="float:right">
+                May 2nd, 2020 by emapelli
+            </div>
+            
             <div class="listing-item-text">Herman Miller Aeron desk chair, black, like new condition.  I've only had it a few months but it's too big for my shared office.</div>
+            
             <div class="listing-item-facultystaff">SU Item</div>
+        
         </div>
 
-        <!-- Sample data -->
+        <!-- Decoy Listing -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
-            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
-            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
-            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
-            <div class="listing-item-student">Personal Item</div>
+            
+            <div class="listing-img">
+                <img src="~/img/rsz_barstools.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Matching barstools, Danish modern
+            </div>
+            
+            <div class="listing-item-date-person" style="float:right">
+                April 30th, 2020 by ssook2
+            </div>
+            
+            <div class="listing-item-text">
+                Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.
+            </div>
+            
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Darren's post from Daniel's Scenario -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by dherstad</div>
-            <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
-            <div class="listing-item-student">Personal Item</div>
+
+            <div class="listing-img">
+                <img src="~/img/AppleEarbudsSmall.jpg">
+            </div>
+            
+            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">
+                Factory Fresh Apple Earbuds, get them quick!
+            </a>
+            
+            <div class="listing-item-date-person" style="float:right">
+                May 1st, 2020 by dherstad
+            </div>
+            
+            <div class="listing-item-text">
+                Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]
+            </div>
+            
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Listing -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
-            <div class="listing-item-student">Personal Item</div>
+
+            <div class="listing-img">
+                <img src="~/img/iphone_3gs.jpg">
+            </div>
+            
+            <div class="listing-item-title" style="float:left">
+                iPhone 3, some scratches, works fine
+            </div>
+            
+            <div class="listing-item-date-person" style="float:right">
+                May 1st, 2020 by ksmithfield
+            </div>
+            
+            <div class="listing-item-text">
+                iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
+            </div>
+            
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+        
         </div>
 
     </main>
