--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -14,29 +14,79 @@
         <!-- The upper box of the left sidebar - main site navigation buttons -->
         <div class="sidebar-upper">
 
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                Home
+            </button>
+
+            <br />
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                About
+            </button>
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                Usage Guidelines
+            </button>
+
             <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#tutModal">
                 Tutorial
             </button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">My Posts</button>
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                My Posts
+            </button>
 
         </div>
+
 
         <!-- Lower box of the left sidebar - item filters for browsing -->
         <div class="sidebar-lower">
 
-            <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp; Select All</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Include My Items</div>
+            <!-- Set defaults -->
+            <div class="lower-sidebar-text">
+                Set defaults
+            </div>
 
-            <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Decor</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Electronics</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Select All
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Include My Items
+            </div>
+
+            <!-- Filter by category -->
+            <div class="lower-sidebar-text">
+                Filter by Category
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Furniture
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Decor
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Books
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Electronics
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Misc
+            </div>
+
         </div>
 
     </div>
@@ -46,36 +96,98 @@
 
         <!-- Same first item on Index page, Elena's chair is not visible! -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
-            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
-            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
-            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+
+            <div class="listing-img">
+                <img src="~/img/rsz_barstools.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Matching barstools, Danish modern
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                April 30th, 2020 by ssook2
+            </div>
+
+            <div class="listing-item-text">
+                Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Darren's post from Daniel's Scenario -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-            <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">Factory Fresh Apple Earbuds, get them quick!</></a>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by dherstad</div>
-            <div class="listing-item-text">Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]</div>
+
+            <div class="listing-img">
+                <img src="~/img/AppleEarbudsSmall.jpg">
+            </div>
+
+            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">
+                Factory Fresh Apple Earbuds, get them quick!
+            </a>
+
+            <div class="listing-item-date-person" style="float:right">
+                May 1st, 2020 by dherstad
+            </div>
+
+            <div class="listing-item-text">
+                Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
-        <!-- Sample Post iPhone-->
+        <!-- Sample Listing iPhone-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
+
+            <div class="listing-img">
+                <img src="~/img/iphone_3gs.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                iPhone 3, some scratches, works fine
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                May 1st, 2020 by ksmithfield
+            </div>
+
             <div class="listing-item-text">
                 iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
             </div>
+
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Post Stapler-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/stapler.jpg"></div>
-            <div class="listing-item-title" style="float:left">Awesome old Swingline 333 stapler</div>
-            <div class="listing-item-date-person" style="float:right">May 9th, 2020 by garbonzo</div>
-            <div class="listing-item-text">Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!</div>
+
+            <div class="listing-img">
+                <img src="~/img/stapler.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Awesome old Swingline 333 stapler
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                May 9th, 2020 by garbonzo
+            </div>
+
+            <div class="listing-item-text">
+                Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!
+            </div>
+
         </div>
 
     </main>
