--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -29,32 +29,81 @@
     <!-- A container for the sidebar information-->
     <div class="sidebar">
 
-        <!-- The upper box of the left sidebar -->
+        <!-- The upper box of the left sidebar - main site navigation buttons -->
         <div class="sidebar-upper">
 
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Home</button><br />
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">About</button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">Usage Guidelines</button>
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                Home
+            </button>
+
+            <br />
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                About
+            </button>
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                Usage Guidelines
+            </button>
+
             <button type="button" class="btn btn-outline-dark sidebar-upper-button" data-toggle="modal" data-target="#tutModal">
                 Tutorial
             </button>
-            <button type="button" class="btn btn-outline-dark sidebar-upper-button">My Posts</button>
+
+            <button type="button" class="btn btn-outline-dark sidebar-upper-button">
+                My Posts
+            </button>
 
         </div>
 
-        <!-- Lower box of the left sidebar -->
+        <!-- Lower box of the left sidebar - item filters for browsing -->
         <div class="sidebar-lower">
 
-            <div class="lower-sidebar-text">Set defaults</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp; Select All</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Include My Items</div>
+            <!-- Set defaults -->
+            <div class="lower-sidebar-text">
+                Set defaults
+            </div>
 
-            <div class="lower-sidebar-text">Filter by Category</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Decor</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Books</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Electronics</div>
-            <div class="checkbox"><input type="checkbox" checked />&nbsp;Misc</div>
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Select All
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Include My Items
+            </div>
+
+            <!-- Filter by category -->
+            <div class="lower-sidebar-text">
+                Filter by Category
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Furniture
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Decor
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Books
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Electronics
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" checked />&nbsp;
+                Misc
+            </div>
+
         </div>
 
     </div>
@@ -62,36 +111,95 @@
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
 
-        <!-- Newly created listing for Elena's Chair scenario item -->
+        <!-- Same first item on Index page -->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/rsz_barstools.jpg"></div>
-            <div class="listing-item-title" style="float:left">Matching barstools, Danish modern</div>
-            <div class="listing-item-date-person" style="float:right">April 30th, 2020 by ssook2</div>
-            <div class="listing-item-text">Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.</div>
+
+            <div class="listing-img">
+                <img src="~/img/rsz_barstools.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Matching barstools, Danish modern
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                April 30th, 2020 by ssook2
+            </div>
+
+            <div class="listing-item-text">
+                Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
-        <!-- Sample Post iPhone-->
+        <!-- Sample Listing iPhone-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/iphone_3gs.jpg"></div>
-            <div class="listing-item-title" style="float:left">iPhone 3, some scratches, works fine</div>
-            <div class="listing-item-date-person" style="float:right">May 1st, 2020 by ksmithfield</div>
-            <div class="listing-item-text">iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]</div>
+
+            <div class="listing-img">
+                <img src="~/img/iphone_3gs.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                iPhone 3, some scratches, works fine
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                May 1st, 2020 by ksmithfield
+            </div>
+
+            <div class="listing-item-text">
+                iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Post Stapler-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/stapler.jpg"></div>
-            <div class="listing-item-title" style="float:left">Awesome old Swingline 333 stapler</div>
-            <div class="listing-item-date-person" style="float:right">May 9th, 2020 by garbonzo</div>
-            <div class="listing-item-text">Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!</div>
+            <div class="listing-img">
+                <img src="~/img/stapler.jpg">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Awesome old Swingline 333 stapler
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                May 9th, 2020 by garbonzo
+            </div>
+
+            <div class="listing-item-text">
+                Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!
+            </div>
+
         </div>
 
         <!-- Sample Post Succulents-->
         <div class="listing">
-            <div class="listing-img"><img src="~/img/succulents.PNG"></div>
-            <div class="listing-item-title" style="float:left">Four mini fake cacti/succulents!!</div>
-            <div class="listing-item-date-person" style="float:right">April 29th, 2020 by jjenson</div>
-            <div class="listing-item-text">Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]</div>
+
+            <div class="listing-img">
+                <img src="~/img/succulents.PNG">
+            </div>
+
+            <div class="listing-item-title" style="float:left">
+                Four mini fake cacti/succulents!!
+            </div>
+
+            <div class="listing-item-date-person" style="float:right">
+                April 29th, 2020 by jjenson
+            </div>
+
+            <div class="listing-item-text">
+                Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]
+            </div>
+
         </div>
 
     </main>
@@ -102,7 +210,9 @@
 
 <!-- FLAGGING CONFIRMATION MODAL -->
 <div id="flagging-confirmation" class="modal fade in">
+
     <div class="modal-dialog">
+
         <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             
             <!-- Decorative header -->
@@ -114,7 +224,9 @@
                 <div class="reuse-mod-body">
                     <em>Thank you!</em>
                 </div>
+
                 <br />
+
                 <!-- body -->
                 <div class="modal-body">
                     <p>Thanks for flagging and doing your part to keep the community safe and focused on doing what it does best. The post has been removed!</p>
@@ -124,12 +236,16 @@
             
                 <!-- Continue button -->
                 <div class="modal-buttons">
+
                     <div class="modal-button-container">
+
                         <button type="button" style="font-size:large;" class="btn btn-outline-dark modal-button"
                                 data-dismiss="modal">
                             Done!
                         </button><br />
+
                     </div>
+
                 </div>
 
                 <br />
