Fix bug link to earbugs post in browsingStudent.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/74tIViotDUy01IatA-VNWWQAOVEk?Type=TaskLink&Channel=Link&CreatedTime=637267048036850000

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -126,7 +126,7 @@
                 <img src="~/img/AppleEarbudsSmall.jpg">
             </div>
 
-            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">
+            <a class="listing-item-title" asp-area="" asp-page="/factory-fresh-apple-airbuds" style="float:left">
                 Factory Fresh Apple Earbuds, get them quick!
             </a>
 
