--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -179,6 +179,10 @@
                 Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!
             </div>
 
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Post Succulents-->
@@ -198,6 +202,10 @@
 
             <div class="listing-item-text">
                 Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
             </div>
 
         </div>
