Add personal distinction to browsingStudent.cshtml https://tasks.office.com/redhawks.onmicrosoft.com/Home/Task/MKP6cLe4jkiyRg98XbUBOmQANGYf?Type=TaskLink&Channel=Link&CreatedTime=637267229044680000

--- a/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
+++ b/LoydCrafts.WebSite/Pages/browsingStudent.cshtml
@@ -113,6 +113,9 @@
                 Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.
             </div>
 
+            <div class="listing-item-student">
+                Personal Item
+            </div>
 
         </div>
 
@@ -135,6 +138,9 @@
                 Apple Earbuds available, barely used at all. This is a real sweet deal my fellow Seattle University students! Listen to sweet jams as if you were in the mosh pit! [...]
             </div>
 
+            <div class="listing-item-student">
+                Personal Item
+            </div>
 
         </div>
 
@@ -155,6 +161,10 @@
 
             <div class="listing-item-text">
                 iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
             </div>
 
         </div>
