--- a/LoydCrafts.WebSite/Pages/home.cshtml
+++ b/LoydCrafts.WebSite/Pages/home.cshtml
@@ -130,6 +130,10 @@
                 Moving from Chardin and need a home for my 2 matching barstools. Good condition. Slighty creaky, stop by to take a look.
             </div>
 
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Listing iPhone-->
@@ -149,6 +153,10 @@
 
             <div class="listing-item-text">
                 iPhone 3gs. Ancient but works fine, may be locked into AT&amp;T Has some wear and tear around the edges, but overall is in decent condition. [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
             </div>
 
         </div>
@@ -171,6 +179,10 @@
                 Super cool 1960s stapler with great futuristic design!  Got it from my great aunt Myrtle many years ago.  Don't need it anymore.  Works great!
             </div>
 
+            <div class="listing-item-student">
+                Personal Item
+            </div>
+
         </div>
 
         <!-- Sample Post Succulents-->
@@ -190,6 +202,10 @@
 
             <div class="listing-item-text">
                 Finally have the right lighting to get real plants, now my fake succulent babies need a new home! Super cute and [...]
+            </div>
+
+            <div class="listing-item-student">
+                Personal Item
             </div>
 
         </div>
