--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -347,6 +347,7 @@
     background-color: #f7f7f7;
     border: 1px solid #CCC;
     margin-top: 20px;
+    padding-bottom: 20px;
 }
 
 .full-listing-header {
@@ -368,7 +369,7 @@
 }
 
 .listing-body-text {
-    padding: 10px;
+    padding: 10px 35px;
 }
 
 
